fixed the readability to an extent and the issue of the main div not beaing centre when 3 columns

--- a/css.css
+++ b/css.css
@@ -92,10 +92,17 @@ main {
 }
 
 .text-div {
-    border: 1px solid white;
+    border-top: 2px solid #9e9b9b;
     padding: 2%;
     text-align: center;
-    margin: 2%;
+    margin: 3%;
+    max-height: 330px;
+}
+
+.text-div p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 #title {
@@ -108,6 +115,7 @@ main {
     margin: 0 auto;
     margin-top: 2%;
     padding: 2%;
+    border-radius: 10px;
     border: 1px solid #e6e3e3;
     background-color: #181818;
     color: #C0C0C0;
@@ -135,6 +143,7 @@ main {
         margin : 0 auto;
         margin-top: 2%;
         padding: 2%;
+        border-radius: 10px;
         border: 1px solid #e6e3e3;
         background-color: #181818;
         color: #C0C0C0;
@@ -154,6 +163,7 @@ main {
         margin : 0 auto;
         margin-top: 2%;
         padding: 2%;
+        border-radius: 10px;
         border: 1px solid #e6e3e3;
         background-color: #181818;
         color: #C0C0C0;
